objects/MealProduct__c.object
<CustomObject>
    <description>junction</description>
    <fields>
        <fullName>Carbs_F__c</fullName>
        <formula>(Product__r.Carbs__c /  Product__r.Weight__c) * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carbs__c</fullName>
        <label>Carbs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fat_F__c</fullName>
        <formula>(Product__r.Fat__c /  Product__r.Weight__c) * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fat__c</fullName>
        <label>Fat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kcal_F__c</fullName>
        <formula>(Product__r.Kcal__c /  Product__r.Weight__c) * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kcal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kcal__c</fullName>
        <label>Kcal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>Meal</label>
        <referenceTo>Meal__c</referenceTo>
        <relationshipLabel>MealProducts</relationshipLabel>
        <relationshipName>MealProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>MealProducts</relationshipLabel>
        <relationshipName>MealProducts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Protein_F__c</fullName>
        <formula>(Product__r.Protein__c /  Product__r.Weight__c) * Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protein</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protein__c</fullName>
        <label>Protein</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>MealProduct</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000000000}</displayFormat>
        <label>MealProduct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MealProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>